--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@
 name: Iota
 author: Ken Spencer
 year: 2018
+title: Iota's Vent
 description: The ramblings of an atheist madman in a mad world
 my_age: 26
 # Url is currently only used only for the RSS feed in feed.xml
