add more into vent

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Iota",
-  "name": "IotaSpencer.me",
+  "name": "Vent.IotaSpencer.me",
   "gcm_sender_id": "482941778795",
   "gcm_sender_id_comment": "Do not change the GCM Sender ID",
   "icons": [{
