--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ plugins:
   - jemoji
   - jekyll-mentions
   - jekyll-include-cache
-  - jekyll-asciinema
+  #- jekyll-asciinema
   - jekyll-paginate
 #defaults:
 #  -
